force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Umbrella Object that existing for the complete &quot;life&quot; of an Installation
For New Installations as new Project is created
For Claims or AfterSales on Existing Installations an Existing Project is linked to Opportunity

The Project Number (8 digits) is used to uniquely Identify all Related Opportunities, Quotes and Orders</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>