force-app/main/default/objects/Project__c/fields/Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to show whether the order is chargeable or non-chargeable</description>
    <label>Chargeable</label>
    <type>Checkbox</type>
</CustomField>