force-app/main/default/objects/Project__c/fields/Main_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Project_Number__c</fullName>
    <description>The Main Project Number next in sequence based on count of existing Main Projects</description>
    <externalId>true</externalId>
    <label>Main Project Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>