force-app/main/default/objects/Project__c/fields/Proj_number__c.field-meta.xml
<CustomField>
    <fullName>Proj_number__c</fullName>
    <description>Used mainly for integration</description>
    <formula>IF(Parent_Project__c != NULL &amp;&amp;  TEXT(Project_Category__c) = &apos;Warranty&apos;, Parent_Project__r.Project_Number__c + &apos;_01&apos;, Project_Number__c)</formula>
    <label>Proj number</label>
    <type>Text</type>
</CustomField>