force-app/main/default/objects/Project__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <description>Project category defining the order type</description>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
                <label>Main Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>