force-app/main/default/objects/Project__c/fields/Project_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Group__c</fullName>
    <description>Internal Parameter for order classification</description>
    <label>Project Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Groups</valueSetName>
    </valueSet>
</CustomField>