force-app/main/default/objects/Project__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <description>Project_Value populated via flows to use it for integration</description>
    <label>Project Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>