force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The Project Stage Identifies the Stage in the life of Assets at a specific Location/Site for a certain Customer</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiate</fullName>
                <default>true</default>
                <label>Initiate</label>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Specify</fullName>
                <isActive>false</isActive>
                <label>Specify</label>
            </value>
            <value>
                <fullName>Warrant</fullName>
                <isActive>false</isActive>
                <label>Warrant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>