force-app/main/default/objects/Project__c/fields/Sub_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Number__c</fullName>
    <externalId>true</externalId>
    <label>Sub Project Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>