force-app/main/default/objects/Project__c/recordTypes/Delivery_Project.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Project</fullName>
    <active>true</active>
    <label>Delivery Project</label>
</RecordType>