force-app/main/default/objects/Project__c/recordTypes/Main_Project.recordType-meta.xml
<RecordType>
    <fullName>Main_Project</fullName>
    <active>true</active>
    <label>Main Project</label>
</RecordType>