force-app/main/default/objects/Project__c/recordTypes/Warranty_Project.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Project</fullName>
    <active>true</active>
    <label>Warranty Project</label>
</RecordType>