force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Number__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Category__c</columns>
    <columns>Project_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>