force-app/main/default/objects/Project__c/listViews/Completed_Projects.listView-meta.xml
<ListView>
    <fullName>Completed_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Number__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Category__c</columns>
    <columns>Project_Group__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Projects</label>
</ListView>